fixed css for search icon on mobile

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -13,11 +13,6 @@
   font-family: '微軟正黑體', 'Microsoft YaHei', '微软雅黑', 'メイリオ', '맑은 고딕', 'Helvetica Neue', Helvetica, Arial, cwTeXMing, serif;
   font-size: 14px;
 }
-@media (max-width: 360px) {
-  .header-v6 .navbar-brand img.shrink-logo {
-    width: 150px;
-  }
-}
 .thumbnails {
   .caption {
     /* blue */
