--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -41,10 +41,26 @@
     }
   }
   .grid-sizer, .grid-item { 
-    width: 31%; 
+    @media (min-width: 992px) {
+      width: 31%; 
+    }
+    @media (max-width: 991px) and (min-width: 768px) {
+      width: 46%; 
+    }
+    @media (max-width: 767px) {
+      width: 92%;
+    }
   }
   .grid-item-width2 { 
-    width: 62%; 
+    @media (min-width: 992px) {
+      width: 62%; 
+    }
+    @media (max-width: 991px) and (min-width: 768px) {
+      width: 92%; 
+    }
+    @media (max-width: 767px) {
+      width: 92%;
+    }
   }
 }
 
